--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -1,6 +1,7 @@
-/**
-* Basic typography style for copy text
-*/
+// -----------------------------------------------------------------------------
+// This file contains CSS Typography classes.
+// -----------------------------------------------------------------------------
+
 html, .root {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
