--- a/main.scss
+++ b/main.scss
@@ -39,7 +39,8 @@ Rebilly 2017
     'components/table',
     'components/list',
     'components/loading',
-    'components/tooltip';
+    'components/tooltip',
+    'components/card';
 
 // 6. Page-specific styles
 @import
