--- a/base/_base.scss
+++ b/base/_base.scss
@@ -8,6 +8,11 @@
 html {
   box-sizing: border-box;
 }
+ // Background color
+html,
+body {
+  background: $background;
+}
 
 /**
  * Make all elements from the DOM inherit from the parent box-sizing
