--- a/main.css
+++ b/main.css
@@ -414,6 +414,10 @@ template {
 html {
   box-sizing: border-box; }
 
+html,
+body {
+  background: #F6F8F9; }
+
 /**
  * Make all elements from the DOM inherit from the parent box-sizing
  * Since `*` has a specificity of 0, it does not override the `html` value
@@ -439,9 +443,6 @@ a {
 *:focus {
   outline: none; }
 
-/**
-* Basic typography style for copy text
-*/
 html, .root {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -795,40 +796,60 @@ sub {
 .z-10 {
   z-index: 10 !important; }
 
-/**
-* Main content containers
-* 1. Make the container full-width with a maximum width
-* 2. Center it in the viewport
-* 3. Leave some space on the edges, especially valuable on small screens
-*/
 .container {
   box-sizing: border-box;
   margin-left: auto;
-  /* 2 */
   margin-right: auto;
-  /* 2 */
   padding-left: 20px;
-  /* 3 */
   padding-right: 20px;
-  /* 3 */
-  width: 100%;
-  /* 1 */ }
+  width: 100%; }
   @media screen and (min-width: 1200px) {
     .container {
       max-width: 1100px; } }
 
-.row {
-  width: 100%;
+.container-fluid {
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 100%; }
+
+.sections {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
-  display: flex; }
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: -10px; }
 
-.row > * {
+.sections + .sections {
+  margin-top: 10px; }
+
+.sections .section-item {
   -webkit-box-flex: 1 0 auto;
   -webkit-flex: 1 0 auto;
   -ms-flex: 1 0 auto;
-  flex: 1 0 auto; }
+  flex: 1 0 auto;
+  padding: 10px; }
+
+.section-item.section-item-primary {
+  -webkit-box-flex: 2 1 48rem;
+  -webkit-flex: 2 1 48rem;
+  -ms-flex: 2 1 48rem;
+  flex: 2 1 48rem; }
+
+.section-item.section-item-secondary {
+  -webkit-box-flex: 1 0 24rem;
+  -webkit-flex: 1 0 24rem;
+  -ms-flex: 1 0 24rem;
+  flex: 1 0 24rem; }
 
 .icon {
   background-size: contain;
@@ -1328,11 +1349,11 @@ sub {
   font-size: 1.4rem;
   line-height: 20px;
   line-height: 2rem;
-  -webkit-transition: box-shadow 0.15s ease;
-  -moz-transition: box-shadow 0.15s ease;
-  -ms-transition: box-shadow 0.15s ease;
-  -o-transition: box-shadow 0.15s ease;
-  transition: box-shadow 0.15s ease; }
+  -webkit-transition: box-shadow 0.05s ease;
+  -moz-transition: box-shadow 0.05s ease;
+  -ms-transition: box-shadow 0.05s ease;
+  -o-transition: box-shadow 0.05s ease;
+  transition: box-shadow 0.05s ease; }
   .field-input:focus, .field-addon:focus {
     box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 1px #0044D4; }
 
@@ -2099,5 +2120,44 @@ ul, ol {
 .has-tooltip-right:after {
   margin-left: 0;
   margin-bottom: -16px; }
+
+.card {
+  box-sizing: border-box;
+  background: #FFFFFF;
+  box-shadow: 0 0 0 1px rgba(107, 115, 132, 0.03), 0 1px 2px 0 rgba(107, 115, 132, 0.24), 0 4px 4px 0 rgba(107, 115, 132, 0.05);
+  border-radius: 4px; }
+
+.card-title {
+  padding: 20px 20px 0 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  border-top: 1px solid #E1E7EA; }
+
+.card-title:first-child {
+  border-top: none; }
+
+.card-title > *,
+.card-subtitle > * {
+  margin: 0;
+  -webkit-box-flex: 1 0 50%;
+  -webkit-flex: 1 0 50%;
+  -ms-flex: 1 0 50%;
+  flex: 1 0 50%;
+  min-width: 0; }
+
+.card-title h2,
+.card-title h3 {
+  padding-right: 20px; }
+
+.card-content {
+  padding: 20px; }
+
+.card-content > * {
+  margin: 0; }
+
+.card-content + .card-content {
+  border-top: 1px solid #E1E7EA; }
 
 /*# sourceMappingURL=main.css.map */
