--- a/base/_base.scss
+++ b/base/_base.scss
@@ -45,3 +45,9 @@ a {
  *:focus {
     outline: none;
 }
+
+/**
+ * Text Selection
+ */
+*::-moz-selection { background: $light-blue }
+*::selection { background: $light-blue; }
