--- a/main.css
+++ b/main.css
@@ -443,6 +443,15 @@ a {
 *:focus {
   outline: none; }
 
+/**
+ * Text Selection
+ */
+*::-moz-selection {
+  background: #DCE7FE; }
+
+*::selection {
+  background: #DCE7FE; }
+
 html, .root {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -815,7 +824,7 @@ sub {
   padding-right: 20px;
   width: 100%; }
 
-.sections {
+.grid, .grid-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -827,29 +836,53 @@ sub {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin: -10px; }
+  margin: -10px;
+  margin: -1rem; }
 
-.sections + .sections {
+.grid + .grid, .grid-content + .grid, .grid + .grid-content, .grid-content + .grid-content {
   margin-top: 10px; }
 
-.sections .section-item {
+.grid .grid-item, .grid-content .grid-item {
   -webkit-box-flex: 1 0 auto;
   -webkit-flex: 1 0 auto;
   -ms-flex: 1 0 auto;
   flex: 1 0 auto;
   padding: 10px; }
+  @media screen and (max-width: 991px) {
+    .grid .grid-item, .grid-content .grid-item {
+      width: 100%; } }
+  @media screen and (max-width: 575px) {
+    .grid .grid-item, .grid-content .grid-item {
+      width: 100%; } }
 
-.section-item.section-item-primary {
+.grid-item.grid-item-primary {
   -webkit-box-flex: 2 1 48rem;
   -webkit-flex: 2 1 48rem;
   -ms-flex: 2 1 48rem;
   flex: 2 1 48rem; }
 
-.section-item.section-item-secondary {
+.grid-item.grid-item-secondary {
   -webkit-box-flex: 1 0 24rem;
   -webkit-flex: 1 0 24rem;
   -ms-flex: 1 0 24rem;
   flex: 1 0 24rem; }
+
+.grid-content {
+  margin: -8px;
+  margin: -0.8rem; }
+
+.grid-content + .grid-content {
+  margin-top: 8px; }
+
+.grid-content .grid-item {
+  -webkit-box-flex: 1 0 auto;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+  padding: 8px; }
+  @media screen and (max-width: 575px) {
+    .grid-content .grid-item {
+      width: 100%; } }
 
 .icon {
   background-size: contain;
@@ -2132,8 +2165,7 @@ ul, ol {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
-  display: flex;
-  border-top: 1px solid #E1E7EA; }
+  display: flex; }
 
 .card-title:first-child {
   border-top: none; }
@@ -2154,10 +2186,20 @@ ul, ol {
 .card-content {
   padding: 20px; }
 
-.card-content > * {
+.card-content > *:not(.grid-content) {
   margin: 0; }
 
-.card-content + .card-content {
-  border-top: 1px solid #E1E7EA; }
+.card-content {
+  border-bottom: 1px solid #E1E7EA; }
+
+.card-content:last-child {
+  border: none; }
+
+/**
+* Types
+*/
+.card.card-secondary {
+  background: #F9FAFB;
+  box-shadow: 0 0 0 1px #E1E7EA inset; }
 
 /*# sourceMappingURL=main.css.map */
