--- a/main.css
+++ b/main.css
@@ -814,7 +814,7 @@ sub {
   width: 100%; }
   @media screen and (min-width: 1200px) {
     .container {
-      max-width: 1100px; } }
+      max-width: 1140px; } }
 
 .container-fluid {
   box-sizing: border-box;
@@ -824,7 +824,7 @@ sub {
   padding-right: 20px;
   width: 100%; }
 
-.grid, .grid-content {
+.grid, .grid-content, .grid-content-no-padding {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -837,22 +837,24 @@ sub {
   -ms-flex-pack: center;
   justify-content: center;
   margin: -10px;
-  margin: -1rem; }
+  margin: -1rem;
+  max-width: 1140px;
+  max-width: 114rem; }
+  @media screen and (max-width: 1099px) {
+    .grid, .grid-content, .grid-content-no-padding {
+      display: block; } }
 
-.grid + .grid, .grid-content + .grid, .grid + .grid-content, .grid-content + .grid-content {
+.grid + .grid, .grid-content + .grid, .grid-content-no-padding + .grid, .grid + .grid-content, .grid-content + .grid-content, .grid-content-no-padding + .grid-content, .grid + .grid-content-no-padding, .grid-content + .grid-content-no-padding, .grid-content-no-padding + .grid-content-no-padding {
   margin-top: 10px; }
 
-.grid .grid-item, .grid-content .grid-item {
+.grid .grid-item, .grid-content .grid-item, .grid-content-no-padding .grid-item {
   -webkit-box-flex: 1 0 auto;
   -webkit-flex: 1 0 auto;
   -ms-flex: 1 0 auto;
   flex: 1 0 auto;
   padding: 10px; }
-  @media screen and (max-width: 991px) {
-    .grid .grid-item, .grid-content .grid-item {
-      width: 100%; } }
   @media screen and (max-width: 575px) {
-    .grid .grid-item, .grid-content .grid-item {
+    .grid .grid-item, .grid-content .grid-item, .grid-content-no-padding .grid-item {
       width: 100%; } }
 
 .grid-item.grid-item-primary {
@@ -867,22 +869,48 @@ sub {
   -ms-flex: 1 0 24rem;
   flex: 1 0 24rem; }
 
-.grid-content {
+.grid-content, .grid-content-no-padding {
   margin: -8px;
   margin: -0.8rem; }
+  @media screen and (max-width: 1099px) {
+    .grid-content, .grid-content-no-padding {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex; } }
+  @media screen and (max-width: 767px) {
+    .grid-content, .grid-content-no-padding {
+      display: block; } }
 
-.grid-content + .grid-content {
+.grid-content + .grid-content, .grid-content-no-padding + .grid-content, .grid-content + .grid-content-no-padding, .grid-content-no-padding + .grid-content-no-padding {
   margin-top: 8px; }
 
-.grid-content .grid-item {
-  -webkit-box-flex: 1 0 auto;
-  -webkit-flex: 1 0 auto;
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
+.grid-content .grid-item, .grid-content-no-padding .grid-item {
   padding: 8px; }
   @media screen and (max-width: 575px) {
-    .grid-content .grid-item {
+    .grid-content .grid-item, .grid-content-no-padding .grid-item {
       width: 100%; } }
+
+.grid-content-no-padding {
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  margin: 0; }
+  @media screen and (max-width: 767px) {
+    .grid-content-no-padding {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex; } }
+
+.grid-content-no-padding + .grid-content.grid-content-no-padding, .grid-content-no-padding + .grid-content-no-padding {
+  margin-top: 0; }
+
+.grid-content-no-padding .grid-item {
+  padding: 0; }
+  @media screen and (max-width: 575px) {
+    .grid-content-no-padding .grid-item {
+      width: auto; } }
 
 .icon {
   background-size: contain;
@@ -2186,7 +2214,7 @@ ul, ol {
 .card-content {
   padding: 20px; }
 
-.card-content > *:not(.grid-content) {
+.card-content > *:not(.grid-content):not(.grid-content-no-padding) {
   margin: 0; }
 
 .card-content {
