--- a/main.scss
+++ b/main.scss
@@ -40,7 +40,9 @@ Rebilly 2017
     'components/list',
     'components/loading',
     'components/tooltip',
-    'components/card';
+    'components/card',
+    'components/chip',
+    'components/tab';
 
 // 6. Page-specific styles
 @import
