--- a/main.css
+++ b/main.css
@@ -1373,6 +1373,12 @@ sub {
 .has-badge.is-info::after {
   background: #0044D4; }
 
+.badge.badge-tag {
+  padding: 4px 8px;
+  padding: 0.4rem 0.8rem;
+  color: #6B7384;
+  border-radius: 4px; }
+
 .field,
 .field-control {
   position: relative; }
@@ -1798,6 +1804,9 @@ ul, ol {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
   margin-bottom: 8px;
   margin-bottom: 0.8rem; }
 
@@ -2229,5 +2238,70 @@ ul, ol {
 .card.card-secondary {
   background: #F9FAFB;
   box-shadow: 0 0 0 1px #E1E7EA inset; }
+
+.chip {
+  display: inline-block;
+  height: auto;
+  box-sizing: border-box;
+  text-transform: none;
+  text-align: center;
+  vertical-align: baseline;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  background: #E1E7EA;
+  color: #0D2B3E;
+  border-radius: 4px;
+  border: none;
+  padding: 8px 16px;
+  padding: 0.8rem 1.6rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  font-size: 1.4rem;
+  line-height: 20px;
+  line-height: 2rem; }
+
+.chip.has-delete .btn.btn-link .icon {
+  fill: #6B7384;
+  margin-left: 8px; }
+
+.tab {
+  padding-left: 0;
+  list-style: none;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  background: #FFFFFF; }
+
+.tab-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-flex: 0 0 auto;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto; }
+
+.tab-item .tab-link {
+  line-height: 20px;
+  padding: 16px 0;
+  padding: 1.6rem 0;
+  margin: 0 16px;
+  margin: 0 1.6rem;
+  cursor: pointer; }
+  .tab-item .tab-link:hover {
+    text-decoration: none; }
 
 /*# sourceMappingURL=main.css.map */
