--- a/main.scss
+++ b/main.scss
@@ -42,7 +42,8 @@ Rebilly 2017
     'components/tooltip',
     'components/card',
     'components/chip',
-    'components/tab';
+    'components/tab',
+    'components/popover';
 
 // 6. Page-specific styles
 @import
