--- a/base/_helpers.scss
+++ b/base/_helpers.scss
@@ -87,7 +87,6 @@
 .inset-m { @include rem(padding, $inset-m!important) };
 .inset-l { @include rem(padding, $inset-l!important) };
 .inset-xl { @include rem(padding, $inset-xl!important) };
-.stack-default { @include rem(margin, $stack-default!important) };
 .stack-xxs { @include rem(margin, $stack-xxs!important) };
 .stack-xs { @include rem(margin, $stack-xs!important) };
 .stack-s { @include rem(margin, $stack-s!important) };
@@ -130,12 +129,12 @@
 /**
 * Z-Index
 */
-.z-90 { z-index: 90!important; }
-.z-80 { z-index: 80!important; }
-.z-70 { z-index: 70!important; }
-.z-60 { z-index: 60!important; }
-.z-50 { z-index: 50!important; }
-.z-40 { z-index: 40!important; }
-.z-30 { z-index: 30!important; }
-.z-20 { z-index: 20!important; }
-.z-10 { z-index: 10!important; }
+.z-90 { z-index: $z-90!important; }
+.z-80 { z-index: $z-80!important; }
+.z-70 { z-index: $z-70!important; }
+.z-60 { z-index: $z-60!important; }
+.z-50 { z-index: $z-50!important; }
+.z-40 { z-index: $z-40!important; }
+.z-30 { z-index: $z-30!important; }
+.z-20 { z-index: $z-20!important; }
+.z-10 { z-index: $z-10!important; }
