Added accent color

--- a/abstracts/_variables.scss
+++ b/abstracts/_variables.scss
@@ -52,6 +52,7 @@ $green: #00AA13;
 $light-green: #C4F7CA;
 $red: #E53935;
 $light-red: #FFD4D3;
+$accent: #00CCC4;
 $background: #F6F8F9;
 $dark-background: #505A6F;
 $light-background: #F9FAFB;
@@ -71,6 +72,7 @@ $colours: (
     light-green         $light-green,
     red                 $red,
     light-red           $light-red,
+    accent              $accent,
     background          $background,
     dark-background     $dark-background,
     light-background    $light-background
