--- a/components/_popover.scss
+++ b/components/_popover.scss
@@ -19,7 +19,7 @@
     width: 20px;
     height: 20px;
     left: 50%;
-    margin-left: -10px;
+    @include rem(margin-left, -10px);
     background: transparent;
     top: -20px;
     z-index: $z-80;
@@ -31,23 +31,22 @@
     width: 16px;
     height: 16px;
     left: 50%;
-    margin-left: -8px;
+    @include rem(margin-left, -8px);
     background: #FFFFFF;
     box-shadow: 0 0 0 1px rgba($muted, 0.09), 0 1px 2px 0 rgba($muted, 0.24), 4px 0 4px 0 rgba($muted, 0.05);
     top: 14px;
     @include browser-prefix(transform, rotate(45deg));
 }
 
-.popover-title,
-.popover-subtitle {
-    padding: $inset-m;
+.popover-title {
+    @include rem(padding, $space-m);
     @include display-flex;
     border-bottom: 1px solid $faint-gray;
 }
 
 .popover-subtitle {
-    padding: $space-m $space-m 0 $space-m;
-    border-bottom: none;
+    @include display-flex;
+    @include rem(padding-bottom, $space-m);
 }
 
 .popover-title > *,
@@ -59,7 +58,7 @@
 
 .popover-title h2,
 .popover-title h3 {
-    padding-right: $space-default;
+    @include rem(padding-right, $space-default);
 }
 
 .popover-control {
@@ -72,7 +71,7 @@
 }
 
 .popover-content {
-    padding: $inset-m;
+    @include rem(padding, $inset-m);
 }
 
 .popover-content > *:not(.grid-content) {
@@ -81,4 +80,18 @@
 
 .popover-content {
     border-bottom: 1px solid $faint-gray;
+}
+
+.popover-content:last-child {
+    border: none;
+    border-radius: 0 0 $border-radius $border-radius;
+}
+
+/**
+* Types
+*/
+
+//Secondary
+.popover-content.popover-content-secondary {
+    background: $light-background;
 }
