--- a/components/_tab.scss
+++ b/components/_tab.scss
@@ -47,7 +47,7 @@
     border: 0;
     clip: rect(0 0 0 0);
     height: 1px;
-    margin: -1px;
+    @include rem(margin, -1px);
     overflow: hidden;
     padding: 0;
     position: absolute;
