--- a/components/_badge.scss
+++ b/components/_badge.scss
@@ -24,19 +24,19 @@
 /**
 * Types
 */
-.badge-positive {
+.badge.badge-positive {
     background: $light-green;
 }
 
-.badge-negative {
+.badge.badge-negative {
     background: $light-red;
 }
 
-.badge-warning {
+.badge.badge-warning {
     background: $light-yellow;
 }
 
-.badge-info {
+.badge.badge-info {
     background: $light-blue;
 }
 
