--- a/main.scss
+++ b/main.scss
@@ -43,7 +43,8 @@ Rebilly 2017
     'components/card',
     'components/chip',
     'components/tab',
-    'components/popover';
+    'components/popover',
+    'components/notification';
 
 // 6. Page-specific styles
 @import
